# badgers

./: .gitignore  404.html  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  benchmark_results.json  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  requirements_dev.txt  sitemap.xml  tox.ini
.github/: dependabot.yml
.github/workflows/: documentation.yml  main.yml  python-publish.yml  tests.yml
about/: index.html
architecture/: index.html
badgers/: __init__.py
badgers/core/: __init__.py  base.py  decorators.py  pipeline.py  utils.py
badgers/core/decorators/: tabular_data.py  (+1 more)
badgers/decorators/: tabular_data.py
badgers/generators/: __init__.py
badgers/transforms/: __init__.py
benchmarking/: index.html
benchmarks/: __init__.py  __main__.py  cli.py  comparator.py  models.py  registry.py  runner.py
benchmarks/checks/: __init__.py  common.py  tabular.py  time_series.py
benchmarks/scenarios/: __init__.py  graph.py  tabular.py  text.py  time_series.py
changelog/: index.html
dev/Create-New-Tabular-Generators/: index.html
docs/: about.md  architecture.md  benchmarking.md  changelog.md  getting-started.md  index.md  resources.md
docs/dev/: Create-New-Tabular-Generators.ipynb
docs/tutorials/: Changepoints-Time-Series.ipynb  Imbalance-Tabular-Data.ipynb  Missingness-Tabular-Data.ipynb  Noise-Tabular-Data.ipynb  Noise-Time-Series.ipynb  Outliers-Tabular-Data.ipynb  Outliers-Time-Series.ipynb  Patterns-Time-Series.ipynb  Pipeline-Tabular-Data.ipynb  Seasons-Time-Series.ipynb  Trends-Time-Series.ipynb  Typos-Text.ipynb  Untitled.ipynb
gen_ref_pages/: index.html
getting-started/: index.html
mcp/: __init__.py
notebooks/: Noise-Robustness-Example.ipynb
notebooks/.ipynb_checkpoints/: Noise-Robustness-Example-checkpoint.ipynb
original_docs/: gen_ref_pages.py  index.md
original_docs/tutorials/: Pipeline-Tabular-Data.ipynb
reference/SUMMARY/: index.html
reference/badgers/: index.html
resources/: index.html
search/: search_index.json
tests/: __init__.py  conftest.py
tests/benchmarks/: test_checks.py  test_cli.py  test_comparator.py  test_models.py  test_registry.py  test_runner.py  test_scenarios.py
tests/core/: test_pipelines.py  test_utils.py
tutorials/Changepoints-Time-Series/: index.html
tutorials/Imbalance-Tabular-Data/: index.html
tutorials/Missingness-Tabular-Data/: index.html
tutorials/Noise-Tabular-Data/: index.html
tutorials/Noise-Time-Series/: index.html
tutorials/Outliers-Tabular-Data/: index.html
tutorials/Outliers-Time-Series/: index.html
tutorials/Patterns-Time-Series/: index.html
tutorials/Pipeline-Tabular-Data/: index.html
tutorials/Seasons-Time-Series/: index.html
tutorials/Trends-Time-Series/: index.html
tutorials/Typos-Text/: index.html
(+160 files in other folders)
