[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "badgers"
version = "0.0.9"
keywords = ["data quality", "bad data", "data science"]
authors = [
    { name = "Julien Siebert", email = "julien.siebert@iese.fraunhofer.de" },
]
maintainers = [
    { name = "Julien Siebert", email = "julien.siebert@iese.fraunhofer.de" },
]
description = "Badgers: bad data generators"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Development Status :: 1 - Planning",
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "scikit-learn",
    "networkx"
]
[project.urls]
"Homepage" = "https://github.com/Fraunhofer-IESE/badgers"
"Bug Tracker" = "https://github.com/Fraunhofer-IESE/badgers/issues"

