[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "badgers"
version = "0.0.13"
keywords = ["data quality", "bad data", "data science"]
authors = [
    { name = "Julien Siebert", email = "julien.siebert@iese.fraunhofer.de" },
]
maintainers = [
    { name = "Julien Siebert", email = "julien.siebert@iese.fraunhofer.de" },
]
description = "Badgers: bad data generators"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Development Status :: 1 - Planning",
]
dependencies = [
    "numpy~=2.4.1",
    "scikit-learn~=1.8.0",
    "networkx~=3.6.1",
    "pandas~=2.3.3",
    "scipy~=1.17.0",
]
[project.optional-dependencies]
dev = [
    "tox~=4.34.1",
    "mkdocs~=1.6.1",
    "mkdocstrings~=1.0.1",
    "mkdocstrings-python~=2.0.1",
    "mkdocs-gen-files~=0.6.0",
    "mkdocs-material~=9.7.1",
    "mkdocs-literate-nav~=0.6.2",
    "mkdocs-jupyter~=0.25.1",
    "jupyterlab~=4.5.2",
    "matplotlib~=3.10.8",
    "seaborn~=0.13.2",
    "pytest~=9.0.2",
    "pytest-timeout~=2.4.0",
    "pytest-benchmark~=5.2.3",
    "flake8~=7.3.0",
]
[project.urls]
"Homepage" = "https://github.com/Fraunhofer-IESE/badgers"
"Bug Tracker" = "https://github.com/Fraunhofer-IESE/badgers/issues"

[tool.flake8]
exclude = [
    ".venv",
    ".tox",
    "site",
    "experiments",
    "uncertainty-main-*",
    "__pycache__",
    ".git",
    ".idea",
    ".vscode",
    "notebooks",
    ".continue",
    "mcp",
    "profiling_tests",
    "benchmarks/results",
    "benchmarks/baselines",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
]

